--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,7 +3,7 @@ body {
     color: azure;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url('/assets/images/background.webp');
+    background-image: url('../images/background.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
